Version 3.0.1 with improved Java 11 support
This commit steps the version of TeXPrinter. It fixes some issues with
Java 11 and our dependencies.

Furthermore, some Gradle deprecations were removed and the readme has
been updated.